<resources>
  <string name="app_name">Koasta</string>
  <string name="title_activity_onboarding">Koasta</string>
  <string name="onboarding_caption_page_1">Forget queueing for a drink</string>
  <string name="onboarding_caption_page_2"><![CDATA[Just take a seat & order with Koasta]]></string>
  <string name="onboarding_caption_page_3">We\'ll let you know when it\'s ready</string>
  <string name="onboarding_start_button_title">Get Started</string>
  <string name="onboarding_skip_button_title">Skip</string>
  <string name="title_activity_authentication">VerifyPhoneActivity</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="authentication_input_number_wizard_title">Please sign in to get started</string>
  <string name="authentication_input_number_wizard_body">Sign in so that we can verify who you are at the bar, and show you your current and previous orders.\n\nWe only keep a record of your name. No other personal information is stored or shared with third parties.</string>
  <string name="authentication_input_number_wizard_continue_button">Continue</string>
  <string name="authentication_input_number_wizard_skip_button_title">I\'ll join later</string>
  <string name="authentication_input_number_wizard_code_field_hint">Enter mobile number</string>
  <string name="authentication_input_verification_wizard_title">We\'ve sent your activation code to %1$s</string>
  <string name="authentication_input_verification_wizard_body">Enter it below to complete your account verification</string>
  <string name="authentication_input_verification_wizard_continue_button">Create Account</string>
  <string name="authentication_input_number_wizard_help_button_title">I didn\'t receive a code</string>
  <string name="authentication_input_verification_wizard_legal">
    <![CDATA[By continuing I agree to <a href="terms-and-conditions"><b>Koasta\'s Terms &amp; Conditions</b></a> and <a href="privacy-policy"><b>Privacy Policy</b></a>.]]>
  </string>
  <string name="authentication_input_verification_wizard_login_success">Account created! Welcome to Koasta 🎉</string>
  <string name="authentication_input_verification_wizard_login_fail">\"That code doesn\'t seem right. Can you check and try again?\"</string>
  <string name="authentication_input_verification_wizard_phone_fail">We couldn\'t reach that number. Can you double check and try again?</string>
  <string name="menu_button_search">Find a venue</string>
  <string name="logo_title">Koasta</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="icon_location_access_description">Location access</string>
  <string name="enable_location_card_title">See what\'s nearby</string>
  <string name="enable_location_card_subtitle">Enable location access to discover the bars, pubs and cafes near you</string>
  <string name="enable_location_card_button_title">Allow location access</string>
  <string name="venues_fetch_failed">Failed to fetch nearby venues. Please make sure you\'re connected to the internet</string>
  <string name="orders_fetch_failed">Failed to fetch your past orders. Please make sure you\'re connected to the internet</string>
  <string name="section_title_menu">Menu</string>
  <string name="order_bar_view_order_button">View order</string>
  <string name="venue_menu_error">We weren\'t able to fetch the details for this venue. Please try again in a moment.</string>
  <string name="venue_menu_estimate_error">We weren\'t able to fetch the details for your order. Please try again in a moment.</string>
  <string name="order_error">We weren\'t able to fetch the details for this order. Please try again in a moment.</string>
  <string name="order_confirmation_title">Your Order</string>
  <string name="dialog_payment_method_title">Pay by</string>
  <string name="dialog_cancel_button">Cancel</string>
  <string name="order_failed">We were unable to process this order. Please try again later.</string>
  <string name="tab_home">Home</string>
  <string name="tab_orders">Orders</string>
  <string name="tab_settings">Settings</string>
  <string name="error_payment_confirm">We were unable to confirm your order details, please try again later</string>
  <string name="google_play_missing">Google Play Services is currently unavailable. If it\'s updating, please wait until it\'s done and open Koasta again.</string>
  <string name="orders_no_orders_title">You\'ve not placed any orders yet</string>
  <string name="orders_no_orders_subtitle">Life\'s too short for queuing, start treating yourself to table-service instead!</string>
  <string name="string_order_status_title_ordered">Your order has been placed 👍</string>
  <string name="string_order_status_title_in_progress">Your order has been confirmed ✅</string>
  <string name="string_order_status_title_ready">Your order is ready 🚀</string>
  <string name="string_order_status_title_rejected">Sorry, there might be a problem with your order</string>
  <string name="string_order_status_title_complete">You received your order 🎉</string>
  <string name="string_order_status_title_payment_pending">Sorry, there might be a problem with your order</string>
  <string name="string_order_status_title_payment_failed">Sorry, there might be a problem with your order</string>
  <string name="string_order_status_subtitle_ordered">Sit back and relax, we\'ll keep you updated on its progress.</string>
  <string name="string_order_status_subtitle_in_progress">Sit back and relax, we\'ll keep you updated on its progress.</string>
  <string name="string_order_status_subtitle_ready_bar_service">You can now head to the bar. Just show a member of staff this screen to pick it up.</string>
  <string name="string_order_status_subtitle_ready_table_service">Your order will be brought to your table shortly.</string>
  <string name="string_order_status_subtitle_rejected">Please see a member of staff to find out more.</string>
  <string name="string_order_status_subtitle_complete">Nice job beating the queue! Thanks for ordering with Koasta.</string>
  <string name="string_order_status_subtitle_payment_pending">We haven\'t received payment yet. This usually means there was a problem attempting to take payment. Please check with your bank and try again.</string>
  <string name="string_order_status_subtitle_payment_failed">We weren\'t able to take payment with the details you provided. Please check with your bank and try again.</string>
  <string name="order_status_summary_comment">Order placed: %s</string>
  <string name="settings_account_details">Account Details</string>
  <string name="settings_account_details_sign_in">Sign in to view your account details</string>
  <string name="title_activity_legal">LegalActivity</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>
  <string name="legal_error">We weren\'t able to fetch this information, please try again later.</string>
  <string name="facebook_app_id">CHANGEME</string>
  <string name="fb_login_protocol_scheme">CHANGEME</string>
  <string name="no_venues_vote_title">Can\'t find your favourite?</string>
  <string name="no_venues_vote_description">Vote for any of these nearby venues and we\'ll do our best to bring them onboard</string>
  <string name="voting_item_vote">Vote</string>
  <string name="voting_item_description">Register your interest</string>
  <string name="voting_item_voted">Voted</string>
  <string name="voting_item_voted_description">Tap to view progress</string>
  <string name="venues_no_venues_title">Hi there! 👋</string>
  <string name="venues_no_venues_description">Sorry about that, but we\'re expanding quickly! Check back soon to see if we\'ve added nearby venues.</string>
  <string name="venues_no_venues_but_voting_available_description">We\'ve just launched Koasta - an easy and safe way to order at your favourite bars and pubs.\n\nWe\'re working with local venues around the UK and bringing them onboard. You can help by voting for your favourite venues below.</string>
  <string name="error_search_failed">We were unable to fetch your results, please try again later</string>
  <string name="order_confirmation_place_order_button">Pay with card</string>
  <string name="order_confirmation_place_free_order_button">Place order</string>
  <string name="button_continue">Confirm</string>
  <string name="age_confirm_dialog_title">Please confirm your age</string>
  <string name="age_confirm_dialog_message">Your order contains age-restricted items. Please confirm you\'re 18 years of age or older. You may be asked for your ID when you pick up your order.</string>
  <string name="generic_notification_channel_name">General</string>
  <string name="generic_notification_channel_description">Notifications from Koasta about your orders and special offers</string>
  <string name="generic_notification_channel_id">GENERAL</string>
  <string name="order_total_price_free">FREE</string>
  <string name="error_facebook_broken">Facebook is currently unavailable due to situations out of our control. Please try Sign in with Google, or try again later.</string>
  <string name="venue_onboarding_share">Share your interest</string>
  <string name="venue_onboarding_progress_0_title">You\'re a trendsetter!</string>
  <string name="venue_onboarding_progress_0_subtitle">You\'re one of the first few to vote for %s to join Koasta. Once we have enough interest we\'ll start working towards getting this venue onboard.\n\nBy sharing your interest in %s to your friends, you can speed this process up further.</string>
  <string name="venue_onboarding_progress_1_title">We\'re gathering interest</string>
  <string name="venue_onboarding_progress_1_subtitle">People like you are voting for %s to join Koasta! Once we have enough interest we\'ll start working towards getting this venue onboard.\n\nBy sharing your interest in %s to your friends, you can speed this process up further.</string>
  <string name="venue_onboarding_progress_2_title">Nearly there!</string>
  <string name="venue_onboarding_progress_2_subtitle">We\'re in talks with %s and hope to bring them onboard soon. Thanks for your support!</string>
  <string name="venue_opening_later">Opening later</string>
  <string name="venue_closed_error">This venue will be open later. You can browse the menu until then.</string>
  <string name="order_customisation_table_number_label">Table number</string>
  <string name="order_customisation_table_number_placeholder">For table service</string>
  <string name="order_customisation_order_notes_label">Order notes</string>
  <string name="order_customisation_order_notes_placeholder">Customise your order</string>
  <string name="string_order_status_table_service">Your order will be brought to your table.</string>
  <string name="string_order_status_bar_service">You can pick up your order from the bar when it\'s ready.</string>
</resources>
