<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context="io.meshtech.koasta.fragment.OrderConfirmationFragment"
  android:orientation="vertical"
  android:theme="@style/AppTheme">

  <TextView
    android:id="@+id/order_confirmation_venue_label"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    tools:text="The Miller"
    android:textSize="16sp"
    android:fontFamily="@font/manrope_medium"
    app:layout_constrainedHeight="true"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

  <TextView
    android:id="@+id/order_confirmation_summary_label"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    tools:text="1 item · £12.54"
    android:alpha="0.8"
    android:layout_marginBottom="16dp"
    app:layout_constrainedHeight="true"
    app:layout_constraintTop_toBottomOf="@id/order_confirmation_venue_label"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent" />

  <LinearLayout
      android:id="@+id/order_confirmation_customisations"
      app:layout_constrainedHeight="true"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintTop_toBottomOf="@id/order_confirmation_summary_label"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent">
    <LinearLayout
        android:id="@+id/order_confirmation_customisations_table_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp">
      <TextView
          android:text="@string/order_customisation_table_number_label"
          android:textColor="@color/colorAccent"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="0.3" />
      <EditText
          android:id="@+id/order_confirmation_table_number"
          android:lines="1"
          android:maxLines="1"
          android:inputType="textCapCharacters|textNoSuggestions"
          android:scrollHorizontally="true"
          android:scrollbars="horizontal"
          android:textSize="16sp"
          android:hint="@string/order_customisation_table_number_placeholder"
          android:textAlignment="textEnd"
          android:textColor="@color/colorForeground"
          android:textColorHint="@color/colorAccent"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="0.7"
          tools:ignore="TextFields" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">
      <TextView
          android:text="@string/order_customisation_order_notes_label"
          android:textColor="@color/colorAccent"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="0.3" />
      <EditText
          android:id="@+id/order_confirmation_order_notes"
          android:lines="1"
          android:maxLines="1"
          android:inputType="textCapSentences"
          android:scrollHorizontally="true"
          android:scrollbars="horizontal"
          android:textSize="16sp"
          android:hint="@string/order_customisation_order_notes_placeholder"
          android:textAlignment="textEnd"
          android:textColor="@color/colorForeground"
          android:textColorHint="@color/colorAccent"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="0.7"/>
    </LinearLayout>
  </LinearLayout>
  
  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/order_confirmation_recycler"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:background="@color/colorAccentLighter"
    app:layout_constraintTop_toBottomOf="@id/order_confirmation_customisations"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toTopOf="@id/order_confirmation_payment_options"/>

  <View
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/order_confirmation_recycler"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:background="@color/colorAccentLighter" />

  <LinearLayout
    android:id="@+id/order_confirmation_payment_options"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constrainedHeight="true"
    app:layout_constraintTop_toBottomOf="@id/order_confirmation_recycler"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:visibility="gone"
    android:alpha="0"
    tools:visibility="visible">
    <include
      android:id="@+id/order_confirmation_order_gpay_button"
      layout="@layout/buy_with_googlepay_button"
      android:layout_width="match_parent"
      android:layout_height="52sp"
      android:layout_marginTop="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:visibility="gone"/>

    <Button
      android:id="@+id/order_confirmation_order_button"
      android:layout_width="match_parent"
      android:layout_height="52sp"
      android:layout_marginTop="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="20dp"
      android:visibility="gone"
      android:text="@string/order_confirmation_place_order_button"/>

    <Button
      android:id="@+id/order_confirmation_free_order_button"
      android:layout_width="match_parent"
      android:layout_height="52sp"
      android:layout_marginTop="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="20dp"
      android:visibility="gone"
      android:text="@string/order_confirmation_place_free_order_button"/>
  </LinearLayout>

  <ProgressBar
    android:id="@+id/order_confirmation_loading_spinner"
    android:layout_width="30dp"
    android:layout_height="wrap_content"
    android:theme="@style/StandardProgressBarTheme"
    android:indeterminateTintMode="src_atop"
    app:layout_constrainedHeight="true"
    app:layout_constraintTop_toBottomOf="@id/order_confirmation_recycler"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginBottom="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
